--- a/views/layouts/panel/nav.ejs
+++ b/views/layouts/panel/nav.ejs
@@ -3,9 +3,14 @@
 </div>
 <div class="panel-nav-section panel-nav-list">
   <div class="nav-item">
-    <a href="#!" class="nav-item-link" data-page="dashboard">
+    <a href="/" class="nav-item-link" data-page="dashboard">
       <i class="fa-solid fa-house"></i>
       Dashboard</a>
+  </div>
+  <div class="nav-item">
+    <a href="/panel/whatsapp" class="nav-item-link" data-page="whatsapp">
+      <i class="fa-brands fa-whatsapp"></i>
+      Akun Whatsapp</a>
   </div>
 </div>
 <div class="panel-nav-section panel-nav-footer">
