--- a/public/css/pages/panel.css
+++ b/public/css/pages/panel.css
@@ -4,6 +4,9 @@
   justify-content: center;
   align-items: start;
   flex-direction: row;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
   background-color: #e7e6e6;
 }
 .panel-nav-wrapper {
@@ -338,6 +341,116 @@ body.panel-nav-active .panel-nav-wrapper::before {
   content: attr(data-title);
   text-wrap: nowrap;
 }
+
+.popup-wrapper {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 100%;
+  z-index: 21;
+  background-color: transparent;
+  overflow: hidden;
+  transition: all 0.3s ease;
+}/* Float */
+.popup-wrapper.float {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 31;
+  top: -100%;
+  left: 0;
+}
+
+.popup-wrapper.open {
+  top: 0;
+  left: 0%;
+}
+.popup-wrapper.float.open {
+  bottom: 0%;
+  left: 0%;
+}
+
+.popup-wrapper .popup-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 20;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  transition: none;
+}
+.popup-wrapper.float .popup-overlay {
+  z-index: 30;
+}
+.popup-wrapper.open .popup-overlay {
+  opacity: 1;
+  transition: all 0.3s ease;
+  transition-delay: 0.3s;
+}
+.popup-wrapper .popup {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+  height: 100%;
+  padding: 1rem;
+  top: 0;
+  right: 0;
+  z-index: 22;
+  background-color: white;
+  transition: all 0.3s ease;
+}
+.popup-wrapper.float .popup {
+  height: auto;
+  max-height: 90%;
+  width: 90%;
+  max-width: 35rem;
+  z-index: 32;
+  top: unset;
+  right: unset;
+}
+
+.popup-wrapper .popup .popup-header {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.popup-wrapper .popup .popup-header .popup-close {
+  position: relative;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.popup-wrapper .popup .popup-header .popup-close:hover {
+  transform: scale(1.1);
+}
+.popup-wrapper .popup .popup-header .popup-close:active {
+  transform: scale(0.9);
+}
+.popup-wrapper .popup .popup-body {
+  position: relative;
+  flex: 1;
+  overflow: auto;
+  padding: 1rem;
+}
+.popup-wrapper .popup-content {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 100%;
+  transition: all 0.3s ease;
+}
+.popup-wrapper.float .popup-content {
+  display: contents;
+}
+.popup-wrapper.open .popup-content.open {
+  left: 0;
+}
+
 /* media query for tab only */
 @media only screen and (min-width: 768px) {
   .panel-nav-wrapper {
@@ -371,6 +484,9 @@ body.panel-nav-active .panel-nav-wrapper::before {
   }
   .panel-content-wrapper .panel-card .panel-card-content-body {
     padding: 0 1rem;
+  }
+  .popup-wrapper .popup {
+    width: 30rem;
   }
 }
 
