--- a/views/panel/whatsapp.ejs
+++ b/views/panel/whatsapp.ejs
@@ -6,7 +6,7 @@
     <div class="panel-card-content">
       <div class="panel-card-content-nav">
         <div></div>
-        <a role="button" class="blue-text waves-effect waves-gray btn-flat"><i class="material-icons left">add</i> Tambah Akun</a>
+        <a role="button" class="blue-text waves-effect waves-gray btn-flat" id="btn-add"><i class="material-icons left">add</i> Tambah Akun</a>
       </div>
       <div class="panel-card-content-body">
         <div class="container">
@@ -30,3 +30,34 @@
     </div>
   </div>
 </div>
+
+<template id="template-form-add">
+  <form action="#" id="form-add">
+    <div class="row mb-0">
+      <div class="input-field col s12">
+        <input id="name" name="name" type="text" class="validate" required>
+        <label for="name">Nama Device</label>
+      </div>
+    </div>
+    <div class="row mb-0">
+      <div class="input-field col s12">
+        <input id="session" name="session" type="text" class="validate" required>
+        <label for="session">Nama Session</label>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12 center">
+        <button type="submit" class="btn waves-effect waves-light green">
+          Simpan
+        </button>
+      </div>
+    </div>
+  </form>
+</template>
+<template id="template-scanner">
+    <div class="row">
+      <div class="col s12">
+        <img src="2@qXTNddx4CQFTonGedrwh9R9oJaIzn5u5OmN4MSdEXQ6NMbEc/xde87m8LXdO138ncvda3/aULlOW/g==,bdMdZE+K/jicZ0DfsxN1pY1bVtsYuh7xSykWBFZ79BM=,4q2yzV7QqfE1JSKjNhCmKYqOXnP5pfMJGspUZdVRnic=,9WIM3wjApdM2+/8YNlxS6nmzE815GjbuPkUXc3ME+cE=,1" alt="qr" style="width: 100%" data-session="">
+      </div>
+    </div>
+</template>
